--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <title>StickKarter</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="icon" type="image/png" href="%PUBLIC_URL%/images/favicon.png">
+  <link rel="icon" type="image/png" href="/images/favicon.png">
   <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
